# runfast

./: Cargo.toml  LICENSE  LICENSE.txt  build.rs  quickrun.fish  readme.md
.github/workflows/: build-dev.yml  rust-build-deploy.yml  rust-test.yml  rust-version-bump-check.yml
.runfast/: runners.toml
docs/: .quickrun-exe  controlflow.dot  man.md
examples/: runners.toml
src/: cli.rs  defaults.toml  main.rs  runner.rs  runnercache.rs
