[package]
name = "runfast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
directories = "4.0.1"
serde = { version="1.0.147", features = ["derive"] }
skim = "0.9.4"
toml = "0.5.9"
