[package]
name = "runfast"
version = "0.4.1"
edition = "2021"
authors = ["Anna Singleton<annabeths111@gmail.com>"]
repository = "https://github.com/anna-singleton/runfast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[build-dependencies]
clap = { version = "4.0.15", features = ["derive"] }
clap_mangen = { version = "0.2" }

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
directories = "4.0.1"
serde = { version="1.0.147", features = ["derive"] }
regex = "1.6.0"
skim = "0.9.4"
toml = "0.5.9"
